# binance-ai-traders

./: .dockerignore  .gitignore  .sops.yaml  AGENTS.md  BACKTESTING_OPTIMIZATION_CYCLE_PLAN.md  BACKTESTING_README.md  COMPREHENSIVE_ANALYSIS_RESULTS.md  COMPREHENSIVE_TEST_REPORT.md  COMPREHENSIVE_TEST_RESULTS_AND_NEXT_STEPS.md  DASHBOARDS_AND_BACKFILL_SUMMARY.md  DASHBOARD_CONSOLIDATION_SUMMARY.md  DASHBOARD_IMPROVEMENTS_SUMMARY.md  DEPLOYMENT_FIXED.md  DEPLOYMENT_READY.md  DOCUMENT_INVENTORY.md  Dockerfile  ENHANCED_TEST_STRATEGY.md  FINAL_TEST_REPORT.md  GITHUB_ACTIONS_IMPLEMENTATION_COMPLETE.md  GITHUB_ACTIONS_QUICK_START.md  GRAFANA_CONSOLIDATION_FINAL_REPORT.md  GRAFANA_DASHBOARD_CONSOLIDATION_PLAN.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPROVEMENTS-SUMMARY-2025-10-11.md  INSTALL_TOOLS_FIRST.md  KLINE_DATA_ISSUE_DIAGNOSIS.md  Kline events-1759920737403.json  M1_TESTNET_IMPLEMENTATION_PLAN.md  MACD_ANALYSIS_SUCCESS_REPORT.md  METRICS_TESTING_SUMMARY.md  MILESTONE_GUIDE.md  MILESTONE_QUICK_REFERENCE.md  MONITORING_GUIDE.md  README.md  START_HERE.md  TESTING_PLAN_SUMMARY.md  TEST_REPORT.md  Untitled Diagram.drawio  YAML_CONSOLIDATION_SUMMARY.md  advertisment.py  (+39 more)
autonomous-agent/: Dockerfile  MANIFEST.in  README.md  config.sample.toml  pyproject.toml
autonomous-agent/autonomous_agent/: __init__.py  agent.py  cli.py  config.py  llm_client.py  planner.py  tools.py  utils.py
autonomous-agent/autonomous_agent/mcp/: README.md  __init__.py  manager.py
autonomous-agent/autonomous_agent/prompts/: system_agent.txt  system_planner.txt
autonomous-agent/tests/: test_agent.py  test_config.py  test_planner.py
db/: config.py  (+1 more)
src/: .env  .env.dev  docker-compose.yml  environment.py  log_config.py  logging.ini  main.py  pyproject.toml
src/bots/: bot_manager.py  sub_bot.py
src/db/: config.py  storage.py
src/db/model/: admin_user.py  calendars.py  customer.py  customer_configuration.py  fsm_state.py  kline.py  macd.py  order_book.py  telegram_group.py  ticker.py  worker_bot_instance.py
src/db/repository/: account_repository.py  admin_user_repository.py  calendar_repository.py  klines_repository.py  macd_repository.py  order_book_repository.py  order_repository.py  telegram_group_repository.py  ticker_repository.py  worker_bot_instance_repository.py
src/inject/: bot_injector.py
src/inject/module/: repository_module.py  router_module.py  services_subsystem.py  subsystem_manager_module.py
src/install/elastic/: init_indices.sh
src/install/postgres/: postgresql.conf
src/install/shell/: initialize_app.sh
src/install/utility/: split_log_file.py
src/logs/config/: logging.dev.ini  logging.ini
src/markup/inline/: time_pickers.py
src/markup/reply/: main_menu_reply_keyboard.py
src/middleware/: chat_id_middleware.py  moderation_middleware.py  propagation_middleware.py  service_middleware.py
src/oam/: environment.py  log_config.py
src/routers/: actuator_router.py  base_router.py  binance_router.py  configuration_router.py  dispatcher.py  gateway_router.py  new_message_router.py  openai_router.py
src/schedule/: periodic_message_scheduler.py
src/service/: telegram_service.py
src/service/crypto/: indicator_service.py
src/service/elastic/: elastic_service.py
src/service/openai/: ai_assistant.py  openai_api_service.py
src/service/os/: filesystem_service.py
src/subsystem/: actuator_subsystem.py  binance_data_offload_subsystem.py  binance_subsystem.py  binance_trader_process_subsystem.py  bot_subsystem.py  configuration_subsystem.py  database_subsystem.py  elastic_subsystem.py  logger_subsystem.py  openai_subsystem.py  scheduler_subsystem.py  slave_bot_subsystem.py  subsystem.py  subsystem_manager.py
telegram-frontend-python/: .coverage  README.md  pyproject.toml  requirements-test.txt  setup.py
telegram-frontend-python/src/: .env.dev  Dockerfile  main.py  pyproject.toml
telegram-frontend-python/src/logs/: trader-bot.log.2024-12-23  trader-bot.log.2024-12-25
telegram-frontend-python/src/middleware/: correlation_middleware.py
telegram-frontend-python/src/oam/: correlation.py  environment.py
telegram-frontend-python/src/routers/: actuator_router.py  base_router.py  binance_router.py  configuration_router.py  main_menu.py  new_message_router.py  openai_router.py
telegram-frontend-python/src/schedule/: periodic_message_scheduler.py
telegram-frontend-python/src/subsystem/: actuator_subsystem.py  binance_subsystem.py  binance_trader_process_subsystem.py  configuration_subsystem.py  database_subsystem.py  (+4 more)
telegram-frontend-python/tests/: __init__.py  conftest.py  test_utils.py
(+813 files in other folders)
