[tool.poetry]
name = "spambot-python"
version = "0.1.0"
description = "Python bot that spams messages periodically"
authors = ["Cantor Dallocort"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = { version = "^3.6.0", extras = ["fsm_storage"] }
asyncio = "^3.4.3"
logging = "^0.4.9.6"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
