[tool.poetry]
name = "spambot-python"
version = "0.2.2"
description = "Python bot that spams messages periodically"
authors = ["Cantor Dallocort"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = { version = "^3.6.0", extras = ["fsm_storage"] }
asyncio = "^3.4.3"
logging = "^0.4.9.6"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"
openai = "^1.35.10"
python-binance = "^1.0.19"
pandas = "^2.2.2"
elasticsearch = "^8.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
