[tool.poetry]
name = "telegram-frontend-python"
version = "0.1.0"
description = ""
authors = ["Oleg Yakovlev <oyakovinbox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.pytest.ini_options]
markers = [
    "asyncio: mark test as using asyncio"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
